film controller total fixes